# minar-challenge-2

./: .gitignore  README.md  frames_2025-09-16_12.11.43.gv  frames_2025-09-16_12.13.40.gv
ArduinoCode_Simple/src/: main.cpp
arduinoCode/: ClassDiagram.puml
arduinoCode/src/: ArduinoSerial.cpp  ArduinoSerial.h  HallEncoder.cpp  HallEncoder.h  IEncoder.h  IMotor.h  ISerial.h  L298NMotor.cpp  L298NMotor.h  MotorAxis.cpp  MotorAxis.h  MotorSystem.cpp  MotorSystem.h  PIDController.cpp  PIDController.h  SerialCommandHandler.cpp  SerialCommandHandler.h  main.cpp
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
log/: latest_build
ros/: .data  .posegraph  frames_2025-09-18_11.19.05.gv  frames_2025-09-25_09.02.06.gv
ros/install/: local_setup.sh  setup.sh
ros/log/: latest_build
ros/src/ct_bringup/: CMakeLists.txt  package.xml  setup.py
ros/src/ct_bringup/config/: mecanum_drive_controllers.yaml  nav_conf.yaml  ps4_config.yaml  slam_toolbox.yaml
ros/src/ct_bringup/ct_bringup/: asd  click_to_nav_goal.py  motion_controller_node.py  motioncontrol 2.py  odometry_node.py  serialTest.py  teleop_node.py  wheel_encoder_node.py
ros/src/ct_bringup/launch/: bringup.launch.py  nav.launch.py  wheel_encoder_node.py
ros/src/ct_bringup/map/: map.pgm  map.yaml  map_1760005066.pgm  map_1760005066.yaml
ros/src/ct_control/: setup.py
src/ct_bringup/: README.MD  setup.cfg  setup.py
src/ct_control/: setup.cfg
src/ct_description/: CMakeLists.txt
src/ct_sensors/: setup.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
testMotor/src/: main.cpp
(+193 files in other folders)
